[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
redis = "0.23.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
