[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["json"] }
base64 = "0.21.2"
chrono = "0.4.26"
deadpool-postgres = "0.10.5"
deadpool-redis = "0.12.0"
dotenv = "0.15.0"
futures-util = "0.3.28"
hmac = "0.12.1"
lazy_static = "1.4.0"
mime = "0.3.17"
postgres-types = "0.2.5"
redis = "0.23.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_with = "3.0.0"
serde_yaml = "0.9.22"
sha2 = "0.10.7"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1"] }
url = "2.4.0"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
