[metadata]
name = metlo
version = 0.0.16
description = The Python Agent for Metlo
long_description = file: README.md
long_description_content_type = text/markdown
repository = https://github.com/metlo-labs/metlo
url = https://www.metlo.com
license = MIT
project_urls =
    Documentation =https://docs.metlo.com/docs/python
    Source Code = https://github.com/metlo-labs/metlo/
    Issue Tracker = https://github.com/metlo-labs/metlo/issues/
    Twitter =https://mobile.twitter.com/metlohq
    Chat = https://discord.gg/gasqPDKEAC
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.4
include_package_data = True
packages =
    metlo