[package]
name = "metlo-agent"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonschema = "0.16.1"
lazy_static = "1.4.0"
libinjection = "0.3.2"
log = "0.4.17"
mime = "0.3.16"
multipart = "0.18.0"
prost = "0.11.6"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
tokio = { version = "1.25.0", features = ["net", "rt", "sync", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
