[package]
name = "rust-pcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.8.0"
lazy_static = "1.4.0"
nom = "7.1.3"
pcap = "1.0.0"
pktparse = "0.7.1"
sorted-list = "0.2.0"

[profile.release]
debug = true
