[package]
name = "metlo-ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antidote = "1.0.0"
clap = { version = "4.1.4", features = ["derive"] }
lazy_static = "1.4.0"
libinjection = "0.3.2"
mime = "0.3.16"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["net", "rt", "sync"] }
