[package]
name = "metlo-common-ingestor"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antidote = "1.0.0"
clap = { version = "4.1.4", features = ["derive"] }
lazy_static = "1.4.0"
libinjection = "0.3.2"
mime = "0.3.16"
multipart = "0.18.0"
prost = "0.11.6"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
tokio = { version = "1.25.0", features = ["net", "rt", "sync", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
