[package]
name = "sample-high-perf-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
rand = "0.8.5"
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"
