[metadata]
name = metlo_python
version = 0.1.0
description = metlo-python is a middleware for python servers to ingest request traces into Metlo API Security
readme = "README.md"
repository = "https://github.com/metlo-labs/metlo"
url = https://www.metlo.com
license = MIT
project_urls =
    Documentation =https://docs.metlo.com/docs/python
    Source Code = https://github.com/metlo-labs/metlo/
    Issue Tracker = https://github.com/metlo-labs/metlo/issues/
    Twitter =https://mobile.twitter.com/metlohq
    Chat = https://discord.gg/gasqPDKEAC
classifiers =
    Development Status :: 3 - Alpha,
    Intended Audience :: Developers,
    Operating System :: OS Independent,
    Topic :: Security :: Libraries :: Python Modules,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.4,
    Programming Language :: Python :: 3.5,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,


# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me


[options]
python_requires = >= 3.6
package_dir = = src
include_package_data = True
packages =
    metlo_python

[options.packages.find]
where = src